--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,4 +1,30 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<link rel="stylesheet" href="css/footer.css">
+
+<div class="footer">
+    <div class="title">
+        General Store
+    </div>
+    <div class="content">
+        this is a shoping website made by B.tech student named pawan mishra, where you find lots of shoping products and you guys can support me.
+    </div>
+    <div class="links">
+        <a href="" class="link">Facebook</a>
+        <a href="" class="link">Github</a>
+        <a href="" class="link">Instagram</a>
+    </div>
+    <div class="foot">
+        <div class="copyright">
+            Copyright ©2021 Pawan Mishra
+        </div>
+        <div class="info">
+            <a href="/" class="infoItem">Home</a>
+            <a href="/" class="infoItem">About</a>
+            <a href="/" class="infoItem">Blog</a>
+        </div>
+    </div>
+</div>
+
+{{!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -48,4 +74,4 @@
         <div class="col"><a class="social-inner" href="#"><span
                     class="icon mdi mdi-twitter"></span><span>GIT HUB</span></a></div>
     </div>
-</footer>
+</footer> --}}
