--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -30,10 +30,10 @@
                     <a href="/register" class="navLinks" id="home">Register</a>
                 </li>
                 <li class="navItem">
-                    <a href="#about" class="navLinks" id="about">About us</a>
+                    <a href="/about" class="navLinks" id="about">About us</a>
                 </li>
                 <li class="navItem">
-                    <a href="#service" class="navLinks" id="service">Services</a>
+                    <a href="/services" class="navLinks" id="service">Services</a>
                 </li>
                 <li class="navBtn">
                     <a href="/login" class="button" id="signUp">Login</a>
