--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -10,6 +10,7 @@
 <body>
     {{>navbar}}
     <div class="register_page">
+        <h1>Register Page</h1>
         <form action="/register" method="post" id="register">
             <li class="info">
                 <label for="name">Name</label>
@@ -36,5 +37,6 @@
             </li>
         </form>
     </div>
+    {{>footer}}
 </body>
 </html>
