--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,52 +1,50 @@
-.container{
-    border: 4px solid yellow;
-}
-.context-dark, .bg-gray-dark, .bg-primary {
-    color: rgba(255, 255, 255, 0.8);
-}
-
-.footer-classic a, .footer-classic a:focus, .footer-classic a:active {
-    color: #ffffff;
-}
-.nav-list li {
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-
-.nav-list li a:hover:before {
-    margin-left: 0;
-    opacity: 1;
-    visibility: visible;
-}
-
-ul, ol {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.social-inner {
+.footer{
     display: flex;
     flex-direction: column;
+    background-color: gray;
+    position: relative;
+    bottom: 2px;
+    width: 100vw;
+    justify-content: center;
     align-items: center;
+}
+.title{
+    font-weight: bolder;
+    font-size: larger;
+    text-decoration: underline;
+}
+.content{
+    text-align: center;
+}
+.links{
+    display: flex;
+    margin: 10px;
+    justify-content: space-evenly;
+    width: 80%;
+}
+.foot{
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(41, 39, 39);
     width: 100%;
-    padding: 23px;
-    font: 900 13px/1 "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    text-transform: uppercase;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgb(165, 162, 158);
+    margin: 6px;
 }
-.social-container .col {
-    border: 1px solid rgba(255, 255, 255, 0.1);
+.info{
+    width: 50%;
+    display: flex;
+    justify-content: space-evenly;
 }
-.nav-list li a:before {
-    content: "\f14f";
-    font: 400 21px/1 "Material Design Icons";
-    color: #4d6de6;
-    display: inline-block;
-    vertical-align: baseline;
-    margin-left: -28px;
-    margin-right: 7px;
-    opacity: 0;
-    visibility: hidden;
-    transition: .22s ease;
+.info > a:nth-child(n){
+    text-decoration: none;
+    color: rgb(139, 188, 231);
+    margin: 3px;
+
+}
+.copyright{
+    display: flex;
+    align-items: center;
+}
+@media screen and (max-width:500px){
+    
 }
