--- a/public/css/register.css
+++ b/public/css/register.css
@@ -4,10 +4,13 @@
     justify-content: center;
     align-items: center;
     background: linear-gradient(20deg,rgb(245, 186, 186),rgb(194, 194, 241),rgb(183, 240, 183));
+    flex-direction: column;
+    height: 70vh;
 }
 #register{
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
     align-content: space-around;
     margin: 10px 0;
@@ -16,14 +19,20 @@
     border-radius: 50px;
     box-shadow: 5px 3px 6px 3px rgb(56, 54, 54);
     background: linear-gradient(20deg,rgb(53, 51, 51),grey,grey,rgb(53, 51, 51));
+    width: 70%;
 }
 .info{
-    width: 100%;
+    flex-wrap: wrap;
+    width: 500px;
     margin: 5px;
     padding: 3px 5px;
     list-style-type: none;
     display: flex;
     justify-content: space-between;
+}
+.info > label:nth-child(n){
+    margin: 0 auto;
+    width: 50%;
 }
 .submit{
     list-style-type: none;
@@ -33,4 +42,15 @@
     font-weight: bold;
     margin: 6px 10px;
     padding: 3px 5px;
+}
+
+#submit{
+    padding: 5px 8px;
+    border: 3px solid black;
+    border-radius: 10px;
+    margin: 5px auto;
+}
+
+#sumbmit:active{
+    background-color: aquamarine;
 }
